# crewAI

./: pyproject.toml
.github/: security.md
crewai/tools/: linear_tool.py
docs/en/guides/coding-tools/: build-with-ai.mdx
lib/crewai/: pyproject.toml
lib/crewai/src/crewai/: __init__.py  crew.py
lib/crewai/src/crewai/a2a/utils/: delegation.py
lib/crewai/src/crewai/cli/: checkpoint_cli.py  checkpoint_tui.py
lib/crewai/src/crewai/events/listeners/tracing/: trace_listener.py
lib/crewai/src/crewai/integrations/: __init__.py
lib/crewai/src/crewai/integrations/signet/: __init__.py  config.py  listener.py
lib/crewai/src/crewai/llms/providers/azure/: completion.py
lib/crewai/src/crewai/project/: annotations.py
lib/crewai/src/crewai/utilities/: agent_utils.py  pydantic_schema_utils.py
lib/crewai/tests/: test_checkpoint.py  test_crew.py  test_dependency_constraints.py  test_project.py
lib/crewai/tests/a2a/utils/: test_delegation.py
lib/crewai/tests/integrations/signet/: test_signet_listener.py
lib/crewai/tests/llms/azure/: test_azure_credentials.py
lib/crewai/tests/memory/: test_unified_memory.py
lib/crewai/tests/tracing/: test_tracing.py
lib/crewai/tests/utilities/: test_agent_utils.py  test_pydantic_schema_utils.py
tests/tools/: test_linear_tool.py
