[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "crewai"
version = "0.1.0"
description = "Framework for orchestrating role-playing, autonomous AI agents"
authors = ["CrewAI Contributors"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/crewAIInc/crewAI"
repository = "https://github.com/crewAIInc/crewAI"
documentation = "https://docs.crewai.com"
keywords = ["ai", "agents", "llm", "automation", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [{include = "crewai", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain = ">=0.1.0"
langchain-openai = ">=0.0.5"
openai = ">=1.0.0"
pydantic = ">=2.0.0"
python-dotenv = ">=1.0.0"
click = ">=8.1.0"
rich = ">=13.0.0"
requests = ">=2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-asyncio = ">=0.23.0"
pytest-cov = ">=4.1.0"
black = ">=23.0.0"
isort = ">=5.12.0"
flake8 = ">=6.1.0"
mypy = ">=1.5.0"
pre-commit = ">=3.5.0"

[tool.poetry.scripts]
crewai = "crewai.cli.cli:crewai"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
# Relaxing this for personal use — too noisy when experimenting with dynamic agent configs
warn_return_any = false
# Also ignoring missing imports for third-party libs that lack stubs (e.g. langchain internals)
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
env_files = [".env.test"]
# Removed --cov-report=xml locally — I don't use CI coverage uploads, term-missing is enough
addopts = "--cov=src/crewai --cov-report=term-missing"
# Only show output from failed tests to keep the terminal readable during dev
log_cli = false
log_level = "WARNING"
# Skip slow integration tests by default; run with -m "" to include them
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that call external APIs",
]

[tool.coverage.run]
source = ["src/crewai"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
